# finch-gen

./: .gitmodules  Cargo.toml  cbindgen.toml
.cargo/: config
.github/workflows/: docs.yml
macro/: Cargo.toml  build.rs
macro/src/: builtin.rs  diagnostic.rs  lib.rs  struct.rs
src/: builtin.rs  lib.rs  type_gather_pass.rs  use_expand_pass.rs
