[package]
name = "finch-macro"
version = "0.1.0"
authors = ["Hackzzila <admin@hackzzila.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1", features = ["extra-traits", "derive", "parsing", "printing", "clone-impls", "proc-macro", "full"] }
